Fixed nav alignment on touch devices. Refs rockharbor/rockharbor#48

--- a/css/custom-tablet.css
+++ b/css/custom-tablet.css
@@ -1,5 +1,11 @@
 @media screen and (max-width: 1025px) {
 
+/*= Main Navigation
+-----------------------------------------*/
+nav.submenu a {
+	margin-left: 10px;
+}
+
 /*= Footer
 -----------------------------------------*/
 #footer > div {
